First found of accessibility improvements

--- a/test-app/src/main/res/layout/fragment_audiobook.xml
+++ b/test-app/src/main/res/layout/fragment_audiobook.xml
@@ -29,8 +29,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="@string/zero"
             android:minWidth="40dp"
+            android:text="@string/zero"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="@+id/publicationTitle"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,9 +41,9 @@
             android:id="@+id/publicationTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
@@ -61,8 +61,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:text="@string/zero"
             android:minWidth="40dp"
+            android:text="@string/zero"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="@+id/publicationTitle"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,9 +73,10 @@
             android:id="@+id/timelineBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/seek_bar"
             android:foregroundTint="@android:color/white"
             android:progressTint="@android:color/white"
             android:secondaryProgressTint="@android:color/darker_gray"
@@ -93,10 +94,10 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
+        android:background="@color/colorPrimaryDark"
+        android:contentDescription="@string/cover_image"
         android:cropToPadding="true"
         android:scaleType="fitCenter"
-        android:background="@color/colorPrimaryDark"
-        tools:ignore="ContentDescription"
         />
 
     <LinearLayout
@@ -114,10 +115,11 @@
 
         <ImageButton
             android:id="@+id/skipBackward"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
+            android:contentDescription="@string/go_backward_30_seconds"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_rewind_30"
             app:tint="@color/white" />
@@ -128,16 +130,18 @@
             android:layout_height="70dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
+            android:contentDescription="@string/play_or_pause"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_baseline_pause_24"
             app:tint="@color/white" />
 
         <ImageButton
             android:id="@+id/skipForward"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
+            android:contentDescription="@string/go_forward_30_seconds"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_fastforward_30"
             app:tint="@color/white" />
