--- a/test-app/src/main/res/layout/popup_note.xml
+++ b/test-app/src/main/res/layout/popup_note.xml
@@ -13,7 +13,7 @@
             android:layout_height="42dp"
             android:gravity="center"
             android:lineSpacingExtra="4sp"
-            android:text="Note"
+            android:text="@string/note"
             android:textColor="#212121"
             android:textSize="16sp" />
 
@@ -52,6 +52,7 @@
 
         <EditText
             android:id="@+id/note"
+            android:hint="@string/add_a_note"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
