--- a/test-app/src/main/res/drawable/selector_yellow.xml
+++ b/test-app/src/main/res/drawable/selector_yellow.xml
@@ -17,9 +17,25 @@
         </layer-list>
     </item>
     <item android:state_checked="false">
-        <shape android:shape="oval">
-            <solid android:color="#f9ef7d" />
-        </shape>
-
+        <layer-list>
+            <item>
+                <shape android:shape="oval">
+                    <solid android:color="#000"/>
+                    <size
+                        android:width="15dp"
+                        android:height="15dp"/>
+                </shape>
+            </item>
+            <item>
+                <shape android:shape="oval">
+                    <stroke android:color="@android:color/transparent"
+                        android:width="20dp"/>
+                    <solid android:color="#f9ef7d"/>
+                    <size
+                        android:width="10dp"
+                        android:height="10dp"/>
+                </shape>
+            </item>
+        </layer-list>
     </item>
 </selector>
