--- a/test-app/src/main/res/layout/fragment_publication_detail.xml
+++ b/test-app/src/main/res/layout/fragment_publication_detail.xml
@@ -30,7 +30,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="10dp"
-                tools:context=".catalogs.CatalogDetailFragment">
+                tools:context=".catalogs.PublicationDetailFragment">
 
                 <ImageView
                     android:id="@+id/catalogDetail_coverImage"
