--- a/test-app/src/main/res/layout/fragment_bookshelf.xml
+++ b/test-app/src/main/res/layout/fragment_bookshelf.xml
@@ -1,47 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".bookshelf.BookshelfFragment">
 
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable
-            name="viewModel"
-            type="org.readium.r2.testapp.bookshelf.BookshelfViewModel" />
-
-    </data>
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/bookshelf_bookList"
+        android:name="org.readium.r2.testapp.bookshelf"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".bookshelf.BookshelfFragment">
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        tools:context="org.readium.r2.testapp.bookshelf"
+        tools:listitem="@layout/item_recycle_book" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/bookshelf_bookList"
-            android:name="org.readium.r2.testapp.bookshelf"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            tools:context="org.readium.r2.testapp.bookshelf"
-            tools:listitem="@layout/item_recycle_book" />
+    <ProgressBar
+        android:id="@+id/bookshelf_progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
-        <ProgressBar
-            android:id="@+id/bookshelf_progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="@{viewModel.showProgressBar ? View.VISIBLE : View.GONE}" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/bookshelf_addBookFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/add_book"
+        android:src="@drawable/ic_add_white_24dp" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/bookshelf_addBookFab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:layout_margin="16dp"
-            android:contentDescription="@string/add_book"
-            android:src="@drawable/ic_add_white_24dp" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</layout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
