--- a/test-app/src/main/res/layout/item_recycle_catalog.xml
+++ b/test-app/src/main/res/layout/item_recycle_catalog.xml
@@ -8,52 +8,49 @@
   ~ LICENSE file present in the project repository where this source code is maintained.
   -->
 
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/catalogList_cardView"
+    android:layout_width="120dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/catalogList_cardView"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:orientation="vertical"
+        android:weightSum="4">
 
-        <LinearLayout
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:orientation="vertical"
-            android:weightSum="4">
+            android:layout_height="match_parent"
+            tools:ignore="UselessParent">
 
-
-            <FrameLayout
+            <ImageView
+                android:id="@+id/catalogList_coverImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:ignore="UselessParent">
+                android:contentDescription="@string/cover_image" />
 
-                <ImageView
-                    android:id="@+id/catalogList_coverImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/cover_image" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|bottom"
+                android:background="@android:drawable/screen_background_dark_transparent"
+                android:orientation="vertical">
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/catalogList_titleText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="start|bottom"
-                    android:background="@android:drawable/screen_background_dark_transparent"
-                    android:orientation="vertical">
+                    android:padding="16dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/catalogList_titleText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="16dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="12sp" />
-                </LinearLayout>
+        </FrameLayout>
 
-            </FrameLayout>
+    </LinearLayout>
 
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-</layout>
+</androidx.cardview.widget.CardView>
