Implement a basic PDF user settings screen

--- a/test-app/src/main/res/menu/menu_reader.xml
+++ b/test-app/src/main/res/menu/menu_reader.xml
@@ -14,6 +14,14 @@
         tools:ignore="AlwaysShowAction"/>
 
     <item
+        android:id="@+id/settings"
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="@string/epubactivity_settings"
+        android:orderInCategory="80"
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction"/>
+
+    <item
         android:id="@+id/drm"
         android:icon="@drawable/ic_baseline_enhanced_encryption_24"
         android:title="@string/epubactivity_drm_info"
