--- a/test-app/src/main/res/layout/reader3_fragment_reader.xml
+++ b/test-app/src/main/res/layout/reader3_fragment_reader.xml
@@ -3,9 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <androidx.compose.ui.platform.ComposeView
-        android:id="@+id/fragment_reader3_navigator"
+        android:id="@+id/overlay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
 </FrameLayout>
