--- a/test-app/src/main/res/drawable/rbtn_selector.xml
+++ b/test-app/src/main/res/drawable/rbtn_selector.xml
@@ -11,15 +11,15 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape>
-            <solid android:color="@color/colorPrimaryDark" />
-            <stroke android:width="1dp" android:color="@color/colorPrimaryDark" />
+            <solid android:color="@color/readium_colorPrimaryDark" />
+            <stroke android:width="1dp" android:color="@color/readium_colorPrimaryDark" />
         </shape>
 
     </item>
     <item android:state_checked="false">
         <shape android:shape="rectangle">
             <solid android:color="#ffffff" />
-            <stroke android:width="1dp" android:color="@color/colorPrimaryDark" />
+            <stroke android:width="1dp" android:color="@color/readium_colorPrimaryDark" />
         </shape>
     </item>
 </selector>
