--- a/test-app/src/main/res/drawable/rbtn_textcolor_selector.xml
+++ b/test-app/src/main/res/drawable/rbtn_textcolor_selector.xml
@@ -11,6 +11,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="#ffffffff" android:state_checked="true" />
-    <item android:color="@color/colorPrimaryDark" />
+    <item android:color="@color/readium_colorPrimaryDark" />
 
 </selector>
