--- a/test-app/src/main/res/layout/fragment_screen_reader.xml
+++ b/test-app/src/main/res/layout/fragment_screen_reader.xml
@@ -10,13 +10,13 @@
     android:id="@+id/tts_overlay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:background="@color/readium_colorAccent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/timeline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/readium_colorPrimaryDark"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/tts_textView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
         android:gravity="center"
         android:scaleType="fitXY"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/readium_colorPrimaryDark"
         android:textSize="24sp"
         android:textStyle="italic"
 
@@ -71,7 +71,7 @@
         android:id="@+id/controls"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/readium_colorPrimaryDark"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="horizontal"
         android:weightSum="5"
