--- a/test-app/src/main/res/layout/fragment_search.xml
+++ b/test-app/src/main/res/layout/fragment_search.xml
@@ -13,7 +13,7 @@
     android:id="@+id/search_overlay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:background="@color/readium_colorAccent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_recyclerView"
