--- a/test-app/src/main/res/layout/section_header.xml
+++ b/test-app/src/main/res/layout/section_header.xml
@@ -13,7 +13,7 @@
     android:id="@+id/header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent"
+    android:background="@color/readium_colorAccent"
     android:orientation="vertical"
     android:ellipsize="end"
     android:maxLines="3"
