--- a/readium/navigator/src/main/res/layout/viewpager_fragment_epub.xml
+++ b/readium/navigator/src/main/res/layout/viewpager_fragment_epub.xml
@@ -11,6 +11,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="false"
     android:orientation="vertical">
 
     <org.readium.r2.navigator.R2WebView
