Update XML file headers

--- a/readium/navigator/src/main/res/values/colors.xml
+++ b/readium/navigator/src/main/res/values/colors.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Module: r2-navigator-kotlin
-  ~ Developers: Aferdita Muriqi, Clément Baumann
-  ~
-  ~ Copyright (c) 2018. Readium Foundation. All rights reserved.
-  ~ Use of this source code is governed by a BSD-style license which is detailed in the
-  ~ LICENSE file present in the project repository where this source code is maintained.
-  -->
+  Copyright 2023 Readium Foundation. All rights reserved.
+  Use of this source code is governed by the BSD-style license
+  available in the top-level LICENSE file of the project.
+-->
 
 <resources>
     <color name="readium_colorPrimary">#1f21b5</color>
