--- a/test-app/src/main/res/layout/fragment_outline.xml
+++ b/test-app/src/main/res/layout/fragment_outline.xml
@@ -1,12 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ Module: r2-testapp-kotlin
-  ~ Developers: Aferdita Muriqi, Clément Baumann, Mostapha Idoubihi, Paul Stoica
-  ~
-  ~ Copyright (c) 2018. European Digital Reading Lab. All rights reserved.
-  ~ Licensed to the Readium Foundation under one or more contributor license agreements.
-  ~ Use of this source code is governed by a BSD-style license which is detailed in the
-  ~ LICENSE file present in the project repository where this source code is maintained.
-  -->
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+  Copyright 2023 Readium Foundation. All rights reserved.
+  Use of this source code is governed by the BSD-style license
+  available in the top-level LICENSE file of the project.
+-->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
