--- a/test-app/src/main/res/layout/section_header.xml
+++ b/test-app/src/main/res/layout/section_header.xml
@@ -9,6 +9,8 @@
     android:id="@+id/header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/colorPrimarySurface"
+    android:textColor="?attr/colorOnPrimarySurface"
     android:orientation="vertical"
     android:ellipsize="end"
     android:maxLines="3"
