--- a/test-app/src/main/res/values/arrays.xml
+++ b/test-app/src/main/res/values/arrays.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="documentSelectorArray">
-        <item>Import to app storage</item>
-        <item>Add from shared storage</item>
-        <item>Add from the Web</item>
+        <item>Copy to app storage</item>
+        <item>Read from shared storage</item>
+        <item>Stream from the Web</item>
     </string-array>
 
 </resources>
