--- a/readium/navigator/src/main/res/layout/readium_navigator_viewpager_fragment_epub.xml
+++ b/readium/navigator/src/main/res/layout/readium_navigator_viewpager_fragment_epub.xml
@@ -14,7 +14,6 @@
     <org.readium.r2.navigator.R2WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never"/>
+        android:layout_height="match_parent" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
